--- a/css/supersearch.css
+++ b/css/supersearch.css
@@ -9,7 +9,7 @@
          padding: 16px 6px;
         padding-bottom: 16px;
         align-content: center;
-        background-image: url("http://167.99.145.51/vindex/img/w1.jpg");
+        background-image: url("img/w1.jpg");
         background-color: #0000008f;
         background-position: center;
         background-repeat: no-repeat;
