--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,14 @@ h6 {
    
 }
 
+.logo {
+  
+  height: 30px;
+  margin:auto;
+  cursor: pointer;
+  
+}
+
 .v {
     font-family: 'Charm', cursive;
     font-size: 5.5vh;
@@ -189,6 +197,8 @@ h6 {
     letter-spacing: 0px;
     word-spacing: 0px;
 }
+
+
 
 .denny {
     font-family: 'Mukta', sans-serif;
